--- a/ide-about/about.html
+++ b/ide-about/about.html
@@ -17,7 +17,7 @@
 
         <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
 
-        <title>Eclipse Dirigible - About</title>
+        <title>About</title>
 
         <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
 
@@ -33,14 +33,14 @@
         <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
 
         <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
-        <script type="text/javascript" src="about.js"></script>
+        <script type="text/javascript" src="js/about.js"></script>
 
         <!-- Custom IDE Styles -->
         <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
 
     </head>
 
-    <body ng-app="about" ng-controller="AboutController as about" class="view">
+    <body class="view" ng-app="about" ng-controller="AboutController as about">
 
         <div class="container">
             <div class="page-header">
